# vibe-coder

./: .gitignore  CMakeLists.txt  README.md
docs/: architecture.md  changelog.md  dependencies.md  diagrams.md
src/: changesmonitor.cpp  changesmonitor.h  codeeditor.cpp  codeeditor.h  commandpalette.cpp  commandpalette.h  diffviewer.cpp  diffviewer.h  filebrowser.cpp  filebrowser.h  fileopener.cpp  fileopener.h  gitblame.cpp  gitblame.h  gitgraph.cpp  gitgraph.h  imagepreview.cpp  imagepreview.h  main.cpp  mainwindow.cpp  mainwindow.h  markdownpreview.cpp  markdownpreview.h  notificationpanel.cpp  notificationpanel.h  project.cpp  project.h  projectdialog.cpp  projectdialog.h  promptedit.cpp  promptedit.h  settings.cpp  settings.h  sshdialog.cpp  sshdialog.h  sshmanager.cpp  sshmanager.h  sshtunneldialog.cpp  sshtunneldialog.h  terminalwidget.cpp  (+9 more)
src/resources/: highlight.min.js  resources.qrc
themes/: Minimal-simple.json  NEEC.json  VSCode Light Modern.json  Warm Light.json  code_green.json  dark-soft.json  dark-warm.json  dark.json  light.json  monokai.json  nord.json  solarized-dark.json  solarized-light.json
